# rp2040-assembly-template

./: CMakeLists.txt  README.md  makefile  pico_sdk_import.cmake
src/: main.S
